--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <div id="nav">
                 <div id="trai">
-                    <h3>gửi một tin nhắn</h3>
+                    <h3>Gửi một tin nhắn</h3>
                     
                     <div id="subnav">
                     <div class="trai1">
